--- a/index.html
+++ b/index.html
@@ -2067,7 +2067,7 @@
 
 
   answerInput.addEventListener("keydown", (e) => {
-    if (e.key === "Enter") {
+    if (e.key === "Enter" || e.code === "Space") {
       e.preventDefault();
       submitAnswer();
     }
